--- a/.circleci/ci-build.yml
+++ b/.circleci/ci-build.yml
@@ -10,11 +10,28 @@ jobs:
           working_directory: java
           command: ./gradlew :app:build
 
+  build-node:
+    executor: node
+    steps:
+      - checkout
+      - run:
+          name: Install Dependencies
+          working-directory: node
+          command: npm install
+      - run:
+          name: Build Application
+          working-directory: node
+          command: npm run build
+
 workflows:
   version: 2
   ci-build:
     jobs:
       - build-java:
+          filters:
+            tags:
+              ignore: /.*/
+      - build-node:
           filters:
             tags:
               ignore: /.*/
