--- a/.circleci/ci-build.yml
+++ b/.circleci/ci-build.yml
@@ -16,11 +16,11 @@ jobs:
       - checkout
       - run:
           name: Install Dependencies
-          working-directory: node
+          working_directory: node
           command: npm install
       - run:
           name: Build Application
-          working-directory: node
+          working_directory: node
           command: npm run build
 
 workflows:
