--- a/.circleci/docker-build.yml
+++ b/.circleci/docker-build.yml
@@ -29,7 +29,7 @@ jobs:
           command: npm run build
       - pack/pack-build:
           name: Build Docker Image
-          working-directory: node
+          working_directory: node
           builder: paketobuildpacks/builder-jammy-base
           buildpacks: paketo-buildpacks/nginx
           image-name: node
